Placeholder for upper RGB

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -898,6 +898,10 @@ $q_{\textrm{min}}$, for the same systems and markers in left panel.
 \end{figure}
 
 
+\subsection{Coherent...}
+
+\todo{Coherent oscillations?}
+
 % \subsection{Eclipsing}
 %
 % \todo{Stars with Kepler light curves}
